# Computer-Graphics-Homework-1

./: CMakeLists.txt  README.md  main.cpp
glad/: glad.c  glad.h
